--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,320 @@
-/* место для вашего кода */
+/* header begin */
+
+.header {
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  margin: 92px 24px 92px 24px;
+  font-size: 18px;
+}
+
+.header__links-list {
+  display: flex;
+  padding: auto;
+  list-style: circle;
+  margin-left: 27px;
+  letter-spacing: 0.1px;
+  line-height: 24.3px;
+  gap: 32px;
+}
+
+.header__links-list-item_no-marker {
+  list-style-type: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  padding-left: 42px;
+  padding-right: 196px;
+}
+
+.header__logo-image {
+  height: 105px;
+}
+
+.address {
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24.3px;
+}
+
+.header__address {
+  justify-self: end;
+}
+
+/* header end */
+
+/* cover begin */
+
+.cover {
+  padding: 165px 50px 0 50px;
+  margin-bottom: 179px;
+  background-image: url("/images/cover.jpg");
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+  width: 1100px;
+  height: 757px;
+  color: #fff;
+  z-index: 1;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  height: inherit;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115px;
+  letter-spacing: 30px;
+  gap: 10px;
+}
+
+.aligned-text {
+  text-align: left;
+  line-height: 115px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.cover__spacing-none {
+  letter-spacing: 0;
+}
+
+/* cover__description begin*/
+
+.cover__description {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-transform: uppercase;
+  text-align: justify;
+  padding-top: 125px;
+  padding-left: 31px;
+}
+
+.cover__description-text {
+  font-size: 22px;
+  line-height: 28px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  word-spacing: 18px;
+  letter-spacing: 80%;
+}
+
+.bet-button {
+  border: 1px solid #ffffff;
+  border-radius: 1px;
+  margin-left: 79px;
+  padding: 12px 32px 12px 31px;
+  line-height: 28px;
+  font-size: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+/* cover__description end */
+
+/* cover end */
+
+/* lots begin */
+
+.lots {
+  margin: 179px 24px 0 24px;
+}
+
+.lots__heading {
+  padding: 0 891px 0 40px;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  width: 334px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 563px;
+  margin-top: 27px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.card__title {
+  padding: 50px 40px 0px 40px;
+  font-style: normal;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+  text-decoration-line: underline;
+  color: #ffffff;
+}
+
+.card__text {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px 48px 40px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  font-style: normal;
+  color: #ffffff;
+}
+
+.lots__look-more-link {
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+/* lots end */
+
+/* about begin */
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 710px;
+  margin: 146px 24px 0 24px;
+}
+
+.about__column {
+  display: grid;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  background-color: #000000;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  margin-top: 35px;
+  margin-left: 47px;
+}
+
+.about__logo-image {
+  align-self: center;
+  padding: 64px 46px 64px 46px;
+}
+
+.about__title {
+  padding-top: 137px;
+  padding-left: 26px;
+  padding-bottom: 99px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 49.96px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-left: 26px;
+  margin-bottom: 24px;
+  letter-spacing: 2%;
+}
+
+.about__text:first-of-type {
+  width: 688px;
+}
+
+.about__text:last-of-type {
+  width: 693px;
+}
+
+/* about end */
+
+/* footer begin */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 156px 50px 88px 51px;
+}
+
+.footer__menu-list {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.13px;
+  list-style-type: none;
+  text-align: center;
+  margin-left: 40px;
+}
+
+.footer__menu-list-item {
+  text-decoration: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 240px;
+  list-style-type: none;
+  gap: 48px;
+}
+
+/* footer end */
